# acousticdistance

./: .gitignore  01_preprocessing.py  02_calculate_distances.py  03_visualize.py  04_long_fromat.py  05_analysis.R  LICENSE  NOTES.rst  README.rst  pyproject.toml
acousticdistance/: __init__.py  distances.py  mfcc_features.py  wav2vec2_features.py  whisper_features.py
