[tool.poetry]
name = "acousticdistance"
version = "0.1.0"
description = "implements acoustic distance measures between two audio snippets with a MFCC-features and an ANN-features"

license = "GPLv3+"

authors = ["Konstantin Sering <konstantin.sering@uni-tuebingen.de>",
           ]

readme = "README.rst"  # Markdown files are supported

repository = "https://github.com/quantling/acousticdistance"

classifiers = ['Development Status :: 3 - Alpha',
               'Environment :: Console',
               'Intended Audience :: Science/Research',
               'Operating System :: POSIX :: Linux',
               'Operating System :: MacOS',
               'Operating System :: Microsoft :: Windows',
               'Topic :: Scientific/Engineering',
               'Topic :: Scientific/Engineering :: Artificial Intelligence',
               'Topic :: Scientific/Engineering :: Information Analysis',]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"  # Compatible python versions must be declared here
numpy = ">=2.1.3"
dtw-python = ">=1.5.3"
librosa = ">=0.10.2"
torch = ">=2.4.1"
transformers = ">=4.48.1"

[tool.pytest.ini_options]
addopts = '--doctest-glob "*.rst"'

[tool.pylint]
  [tool.pylint.basic]
  good-names = ["nn", "ii", "_", "jj", "df"]

  [tool.pylint.format]
  max-line-length = 120

  [tool.pylint.message_control]
  disable = "E1101"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
